Fixed spacing to center LandingHeadline for full-screen height.

--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -9,7 +9,8 @@ body {
 
 .LandingHeadline {
     /* Margins */
-    margin-top: 2vh;
+    margin-top: 5vh;
+    margin-bottom: 13vh;
 
     display: flex;
     justify-content: flex-start;
